--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <option data-content='<span class="flag-icon flag-icon-fr"></span>'>Français</option>
     </select>
     <a class="nav-link text-muted subheading" href="/website">LASTIG</a>
-    <a class="nav-link text-muted subheading" href="/geovis">GEOVIS</a>
+    <a class="nav-link text-muted subheading" href="/geovis">ACTE</a>
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Guillaume Touya</span>
+      <span class="d-block d-lg-none">Ewelina RUPNIK</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/touya.png" alt="">
       </span>
@@ -99,10 +99,10 @@
         <div class="subheading mb-5">73 avenue de Paris · 94165 Saint-Mandé CEDEX · (+33)1 43 98 62 37 ·
           <a>guil<!--anti@spam.fr!-->laume.touya@ign.fr</a>
         </div>
-        <p class="lead mb-5 lang-en">Senior researcher in GI Science, geovisualization, and map generalization. Vice-head of LASTIG lab.</p>
-        <p class="lead mb-5 lang-en">Member of the <a href="">GEOVIS</a> research team</p>
-        <p class="lead mb-5 lang-fr">Directeur de recherche IGN en sciences de l'information géographique, géovisualisation, et généralisation cartographique. Directeur adjoint du LASTIG.</p>
-        <p class="lead mb-5 lang-fr">Membre de l'équipe <a href="">GEOVIS</a></p>
+        <p class="lead mb-5 lang-en">Researcher in photogrammetry.</p>
+        <p class="lead mb-5 lang-en">Member of the <a href="">ACTE</a> research team</p>
+        <p class="lead mb-5 lang-fr">Chargée de recherche IGN en sciences de l'information géographique, géovisualisation, et généralisation cartographique. Directeur adjoint du LASTIG.</p>
+        <p class="lead mb-5 lang-fr">Membre de l'équipe <a href="">ACTE</a></p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
