--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Guillaume
-          <span class="text-primary">Touya</span>
+        <h1 class="mb-0">Ewelina
+          <span class="text-primary">Rupnik</span>
         </h1>
         <div class="subheading mb-5">73 avenue de Paris · 94165 Saint-Mandé CEDEX · (+33)1 43 98 62 37 ·
-          <a>guil<!--anti@spam.fr!-->laume.touya@ign.fr</a>
+          <a>ewelina<!--anti@spam.fr!-->.rupnik@ign.fr</a>
         </div>
         <p class="lead mb-5 lang-en">Researcher in photogrammetry.</p>
         <p class="lead mb-5 lang-en">Member of the <a href="">ACTE</a> research team</p>
@@ -107,7 +107,7 @@
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://www.researchgate.net/profile/Guillaume_Touya">
+          <a href="https://www.researchgate.net/profile/Ewelina_Rupnik">
             <i class="ai ai-researchgate"></i>
           </a>
           <a href="https://github.com/gtouya">
@@ -165,28 +165,6 @@
           </div>
           <article class="col-md-6 col-lg-4">
                 <div class="portfolio-item d-block mx-auto">
-                  <img class="img-fluid" src="img/vgi.png" alt="" />
-                  <div class="portfolio-desc d-flex align-center position-absolute h-100 w-100">
-                    <div class="folio-info my-auto w-100 text-center">
-                      <h5 class="lang-en">Volunteered Geographic Information</h5>
-                      <h5 class="lang-fr">Information géographique volontaire</h5>
-                    </div>
-                  </div>
-                </div>
-          </article>
-          <div class="col-md-6 col-lg-4">
-                <div class="portfolio-item d-block mx-auto">
-                  <img class="img-fluid" src="img/zoom.png" alt="" />
-                  <div class="portfolio-desc align-center position-absolute h-100 w-100">
-                    <div class="folio-info w-100 text-center">
-                      <h5 class="lang-en">Interactions in multi-scale maps</h5>
-                      <h5 class="lang-fr">Interactions dans les cartes multi-échelles</h5>
-                    </div>
-                  </div>
-                </div>
-          </div>
-          <article class="col-md-6 col-lg-4">
-                <div class="portfolio-item d-block mx-auto">
                   <img class="img-fluid" src="img/lod.png" alt="" />
                   <div class="portfolio-desc d-flex align-center position-absolute h-100 w-100">
                     <div class="folio-info my-auto w-100 text-center">
@@ -196,18 +174,6 @@
                   </div>
                 </div>
           </article>
-          <div class="col-md-6 col-lg-4">
-                <div class="portfolio-item d-block mx-auto">
-                  <img class="img-fluid" src="img/auto_carto.png" alt="" />
-                  <div class="portfolio-desc align-center position-absolute h-100 w-100">
-                    <div class="folio-info w-100 text-center">
-                      <h5 class="lang-en">Automated cartography: text placement, schematization, conflation</h5>
-                      <h5 class="lang-fr">Cartographie automatique: placement de texte, schématisation, recalage géométrique</h5>
-                    </div>
-                  </div>
-                </div>
-          </div>
-        </div>
       </div>
     </section>
 
@@ -265,56 +231,58 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Vice-head of LASTIG lab</h3>
-            <div class="subheading mb-3">LASTIG, IGN France</div>
+            <h3 class="mb-0">Researcher</h3>
+            <div class="subheading mb-3">LaSTIG, IGN France</div>
             <p>Description...</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2018 - Present</span>
+            <span class="text-primary">November 2017 - Present</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Head of COGIT research team</h3>
-            <div class="subheading mb-3">LASTIG, IGN France</div>
-            <p>Description...</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2017 - January 2019</span>
-          </div>
-        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior researcher</h3>
-            <div class="subheading mb-3">COGIT, IGN France</div>
+            <h3 class="mb-0">Researcher</h3>
+            <div class="subheading mb-3">DIAS, IGN France</div>
             <p>Description...</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2011 - July 2017</span>
+            <span class="text-primary">January 2017 - October 2017</span>
+          </div>
+        </div>
+
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Research Engineer</h3>
+            <div class="subheading mb-3">Tectonics lab, IPGP France</div>
+            <p>Description...</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">July 2015 - December 2016</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Research Assistant</h3>
+            <div class="subheading mb-3">3D Optical Metrology, FBK, Italy</div>
+            <p>Description...</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">November 2013 - June 2015</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">PhD student</h3>
-            <div class="subheading mb-3">COGIT, IGN France</div>
-            <p>Description...</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">January 2008 - June 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Research engineer</h3>
-            <div class="subheading mb-3">COGIT, IGN France</div>
+            <div class="subheading mb-3">Photogrammetry Research Group, TUWIEN, Austria </div>
               <p>Description...</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2004 - December 2007</span>
+              <span class="text-primary">November 2010 - October 2013</span>
             </div>
         </div>
       </div>
@@ -356,7 +324,7 @@
                     <h4 class="subheading">PhD student</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">My PhD, <a href="http://recherche.ign.fr/labos/cogit/pdf/THESES/TOUYA/theseTouya.pdf">obtained in June 2011</a>, was supervised by Cécile Duchêne and Anne Ruas, and dealt with collaborative map generalisation.</p>
+                    <p class="text-muted">My PhD, <a href="http://recherche.ign.fr/labos/cogit/pdf/THESES/TOUYA/theseRupnik.pdf">obtained in June 2011</a>, was supervised by Cécile Duchêne and Anne Ruas, and dealt with collaborative map generalisation.</p>
                   </div>
                 </div>
               </li>
