Change education etc

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h1 class="mb-0">Ewelina
           <span class="text-primary">Rupnik</span>
         </h1>
-        <div class="subheading mb-5">73 avenue de Paris · 94165 Saint-Mandé CEDEX · (+33)1 43 98 62 37 ·
+        <div class="subheading mb-5">73 avenue de Paris · 94165 Saint-Mandé CEDEX  ·
           <a>ewelina<!--anti@spam.fr!-->.rupnik@ign.fr</a>
         </div>
         <p class="lead mb-5 lang-en">Researcher in photogrammetry.</p>
@@ -110,20 +110,14 @@
           <a href="https://www.researchgate.net/profile/Ewelina_Rupnik">
             <i class="ai ai-researchgate"></i>
           </a>
-          <a href="https://github.com/gtouya">
+          <a href="https://github.com/erupnik">
             <i class="fab fa-github"></i>
           </a>
           <a href="#">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="https://scholar.google.fr/citations?user=Cbc_R2IAAAAJ">
+          <a href="https://scholar.google.com/citations?user=Qjko2xoAAAAJ&hl=en&oi=ao">
             <i class="ai ai-google-scholar"></i>
-          </a>
-          <a href="#">
-            <i class="ai ai-publons"></i>
           </a>
           <a href="#">
             <i class="ai ai-orcid"></i>
@@ -152,34 +146,14 @@
 										</div>
 									</div>
 								</div>
-          </article>
-          <div class="col-md-6 col-lg-4">
-                <div class="portfolio-item d-block mx-auto">
-                  <img class="img-fluid" src="img/agents.png" alt="" />
-                  <div class="portfolio-desc align-center position-absolute h-100 w-100">
-                    <div class="folio-info w-100 text-center">
-                      <a href="" class="fancybox"><i class="fas fa-search-plus fa-3x"></i></a>
-                    </div>
-                  </div>
-                </div>
-          </div>
-          <article class="col-md-6 col-lg-4">
-                <div class="portfolio-item d-block mx-auto">
-                  <img class="img-fluid" src="img/lod.png" alt="" />
-                  <div class="portfolio-desc d-flex align-center position-absolute h-100 w-100">
-                    <div class="folio-info my-auto w-100 text-center">
-                      <h5 class="lang-en">Scale and LOD issues in geovisualization</h5>
-                      <h5 class="lang-fr">échelle et niveau de détail en géovisualisation</h5>
-                    </div>
-                  </div>
-                </div>
-          </article>
+          </article> 
+        </div>
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="news">
+<!--    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="news">
       <div class="w-100">
         <h2 class="mb-5">News</h2>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -221,7 +195,7 @@
           </a>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <hr class="m-0">
 
@@ -300,31 +274,17 @@
         <div class="row">
           <div class="col-lg-12">
             <ul class="timeline">
-              <li>
-                <div class="timeline-image">
-                  <img class="img-circle img-responsive" src="" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>10-09-2004</h4>
-                    <h4 class="subheading">Research assistant</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">I start working at IGN France as a research assistant in the COGIT research team, assisting Cécile Duchêne and Anne Ruas on map generalisation.</p>
-                  </div>
-                </div>
-              </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <img class="img-circle img-responsive" src="" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>01-01-2008</h4>
-                    <h4 class="subheading">PhD student</h4>
+                    <h4>November 2017 </h4>
+                    <h4 class="subheading">I become a permament researcher at LaSTIG, MATIS / ACTE lab</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">My PhD, <a href="http://recherche.ign.fr/labos/cogit/pdf/THESES/TOUYA/theseRupnik.pdf">obtained in June 2011</a>, was supervised by Cécile Duchêne and Anne Ruas, and dealt with collaborative map generalisation.</p>
+                    <p class="text-muted"></p>
                   </div>
                 </div>
               </li>
@@ -334,11 +294,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>01-07-2011</h4>
-                    <h4 class="subheading">Senior researcher at COGIT research team, IGN</h4>
+                    <h4>July 2015</h4>
+                    <h4 class="subheading">Research engineer, <a href="http://www.ipgp.fr/fr">IPGP</a> / IGN, Paris </h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">After my PhD, I become a senior researcher, still in COGIT team, at IGN France. I'm part of the group on automated cartography and geovisualization.</p>
+                    <p class="text-muted">After my PhD, I begin a PostDoc with Marc Pierrot Deseiligny at IGN and IPGP</p>
                   </div>
                 </div>
               </li>
@@ -348,11 +308,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>04-05-2017</h4>
-                    <h4 class="subheading">Habilitation defense</h4>
+                    <h4>15 September 2015</h4>
+                    <h4 class="subheading">PhD defense</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Defense of my <a href="http://recherche.ign.fr/labos/cogit/pdf/HDR/hdr-touya-2017.pdf">habilitation (HDR)</a> in GI science, which allows in France to be the main supervisor of PhD students.</p>
+                    <p class="text-muted">I go back to Vienna for a few days to defend my PhD</p>
                   </div>
                 </div>
               </li>
@@ -362,11 +322,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>15-07-2017</h4>
-                    <h4 class="subheading">Head of COGIT research team</h4>
+                    <h4>November 2013</h4>
+                    <h4 class="subheading">Researcher</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">I take over the leadership if the COGIT research team from Sébastien Mustière.</a></p>
+                    <p class="text-muted">I move to Trento to join the 3D Optical Metrology lab <a href="https://3dom.fbk.eu/">@FBK</a></a></p>
                   </div>
                 </div>
               </li>
@@ -376,11 +336,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>01-09-2018</h4>
-                    <h4 class="subheading">Vice-head of LASTIG lab</h4>
+                    <h4>November 2010</h4>
+                    <h4 class="subheading">PhD student supervised by J Jansa and N Pfeifer</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">I become the vice-head of the new <a href="http://umrlastig.github.io/website">LASTIG lab.</a></p>
+                    <p class="text-muted">I begin my PhD studies at the <a href="https://photo.geo.tuwien.ac.at/">Photogrammetry Research Group</a> @TUWIEN, Austria </p>
                   </div>
                 </div>
               </li>
