Change templ cont

--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>July 2015</h4>
-                    <h4 class="subheading">Research engineer, <a href="http://www.ipgp.fr/fr">IPGP</a> / IGN, Paris </h4>
+                    <h4 class="subheading">Research engineer, <a href="http://www.ipgp.fr/fr">IPGP</a> / <a href="http://ign.fr/">IGN</a>, Paris </h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">After my PhD, I begin a PostDoc with Marc Pierrot Deseiligny at IGN and IPGP</p>
+                    <p class="text-muted">After my PhD, I begin a PostDoc with M Pierrot Deseiligny and Y Klinger</p>
                   </div>
                 </div>
               </li>
@@ -323,10 +323,10 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>November 2013</h4>
-                    <h4 class="subheading">Researcher</h4>
+                    <h4 class="subheading">Researcher at <a href="https://3dom.fbk.eu/">3D Optical Metrology lab @FBK</a></h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">I move to Trento to join the 3D Optical Metrology lab <a href="https://3dom.fbk.eu/">@FBK</a></a></p>
+                    <p class="text-muted">I move to Trento to work with F Remondino and F Nex </p>
                   </div>
                 </div>
               </li>
@@ -337,10 +337,10 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>November 2010</h4>
-                    <h4 class="subheading">PhD student supervised by J Jansa and N Pfeifer</h4>
+                    <h4 class="subheading">PhDc @<a href="https://photo.geo.tuwien.ac.at/">Photogrammetry Research Group</a> @TUWIEN, Austria</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">I begin my PhD studies at the <a href="https://photo.geo.tuwien.ac.at/">Photogrammetry Research Group</a> @TUWIEN, Austria </p>
+                    <p class="text-muted">I begin my PhD studies supervised by J Jansa and N Pfeifer </p>
                   </div>
                 </div>
               </li>
@@ -358,42 +358,22 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Université Paris-Est</h3>
-            <div class="subheading mb-3">Habilitation (HDR)</div>
-            <div>Geographical Information Science</div>
+            <h3 class="mb-0">Technische Universitat WIEN, Austria</h3>
+            <div class="subheading mb-3">PhD in photogrammetry</div>
+            <!--<div>TUWIEN, Austria</div>-->
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">May 2017</span>
+            <span class="text-primary">November 2010 - October 2013</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Université Paris-Est</h3>
-            <div class="subheading mb-3">PhD in Geographical Information Science</div>
+            <h3 class="mb-0">AGH Universtiy of Science and technology, Cracow, Poland</h3>
+            <div class="subheading mb-3">MSc Eng in Geodesy and Cartography, major in photogrammetry</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2008 - June 2011</span>
-          </div>
-        </div>
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">ENSG</h3>
-            <div class="subheading mb-3">Engineering school</div>
-            <div>Geographical Information Science</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2001 - September 2004</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Université Paris-Est</h3>
-            <div class="subheading mb-3">Master in Geographical Information Science</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2003 - September 2004</span>
+            <span class="text-primary">October 2005 - July 2010</span>
           </div>
         </div>
       </div>
