--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
 
     <hr class="m-0">
 
+    <!--
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
@@ -259,9 +260,8 @@
               <span class="text-primary">November 2010 - October 2013</span>
             </div>
         </div>
-      </div>
-
-    </section>
+      </div> 
+    </section> -->
 
     <section id="timeline" class="section appear clearfix">
       <div class="container mar-bot50">
