Change templ cont3

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <option data-content='<span class="flag-icon flag-icon-fr"></span>'>Français</option>
     </select>
     <a class="nav-link text-muted subheading" href="/website">LASTIG</a>
-    <a class="nav-link text-muted subheading" href="/geovis">ACTE</a>
+    <a class="nav-link text-muted subheading" href="/acte">ACTE</a>
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Ewelina RUPNIK</span>
       <span class="d-none d-lg-block">
@@ -61,10 +61,10 @@
           <a class="nav-link js-scroll-trigger lang-en" href="#interest">Research Interests</a>
           <a class="nav-link js-scroll-trigger lang-fr" href="#interest">Sujets de recherche</a>
         </li>
-        <li class="nav-item">
+     <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger lang-en" href="#news">News</a>
           <a class="nav-link js-scroll-trigger lang-fr" href="#news">Actualités</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger lang-en" href="#experience">Experience</a>
           <a class="nav-link js-scroll-trigger lang-fr" href="#experience">Parcours professionnel</a>
@@ -151,9 +151,9 @@
       </div>
     </section>
 
-    <hr class="m-0">
+ <!--   <hr class="m-0">
 
-<!--    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="news">
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="news">
       <div class="w-100">
         <h2 class="mb-5">News</h2>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -288,21 +288,7 @@
                   </div>
                 </div>
               </li>
-              <li>
-                <div class="timeline-image">
-                  <img class="img-circle img-responsive" src="" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>July 2015</h4>
-                    <h4 class="subheading">Research engineer, <a href="http://www.ipgp.fr/fr">IPGP</a> / <a href="http://ign.fr/">IGN</a>, Paris </h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">After my PhD, I begin a PostDoc with M Pierrot Deseiligny and Y Klinger</p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
+              <li class="timeline">
                 <div class="timeline-image">
                   <img class="img-circle img-responsive" src="" alt="">
                 </div>
@@ -313,6 +299,20 @@
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">I go back to Vienna for a few days to defend my PhD</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-image-inverted">
+                  <img class="img-circle img-responsive" src="" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>July 2015</h4>
+                    <h4 class="subheading">Research engineer, <a href="http://www.ipgp.fr/fr">IPGP</a> / <a href="http://ign.fr/">IGN</a>, Paris </h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">After my PhD, I begin a PostDoc with M Pierrot Deseiligny and Y Klinger</p>
                   </div>
                 </div>
               </li>
@@ -337,7 +337,7 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>November 2010</h4>
-                    <h4 class="subheading">PhDc @<a href="https://photo.geo.tuwien.ac.at/">Photogrammetry Research Group</a> @TUWIEN, Austria</h4>
+                    <h4 class="subheading">PhDc at <a href="https://photo.geo.tuwien.ac.at/">Photogrammetry Research Group</a> <a href="https://www.tuwien.at/">@TUWIEN</a>, Austria</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">I begin my PhD studies supervised by J Jansa and N Pfeifer </p>
