--- a/index.html
+++ b/index.html
@@ -263,7 +263,10 @@
       </div> 
     </section> -->
 
-    <section id="timeline" class="section appear clearfix">
+    
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+     <!-- <div class="w-100">
+    <section id="timeline" class="section appear clearfix">-->
       <div class="container mar-bot50">
         <div class="row mar-bot40">
           <div class="col-lg-12 text-center">
@@ -288,7 +291,7 @@
                   </div>
                 </div>
               </li>
-              <li class="timeline">
+              <li>
                 <div class="timeline-image">
                   <img class="img-circle img-responsive" src="" alt="">
                 </div>
@@ -302,8 +305,8 @@
                   </div>
                 </div>
               </li>
-              <li>
-                <div class="timeline-image-inverted">
+              <li class="timeline-inverted">
+                <div class="timeline-image">
                   <img class="img-circle img-responsive" src="" alt="">
                 </div>
                 <div class="timeline-panel">
