Change templ cont5

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </section> -->
 
     
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+    <section class="section appear clearfix" id="experience">
      <!-- <div class="w-100">
     <section id="timeline" class="section appear clearfix">-->
       <div class="container mar-bot50">
