--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
           <a class="nav-link js-scroll-trigger lang-en" href="#publications">Publications</a>
           <a class="nav-link js-scroll-trigger lang-fr" href="#publications">Publications</a>
         </li>
-        <li class="nav-item">
+<!--        <li class="nav-item">
           <a class="nav-link js-scroll-trigger lang-en" href="#projects">Projects</a>
           <a class="nav-link js-scroll-trigger lang-fr" href="#projects">Projets</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger lang-en" href="#other">Other research activities</a>
           <a class="nav-link js-scroll-trigger lang-fr" href="#other">Autres activités de recherche</a>
@@ -139,10 +139,12 @@
         <div class="row">
           <article class="col-md-6 col-lg-4">
 								<div class="portfolio-item d-block mx-auto">
-									<img class="img-fluid" src="img/generalisation.png" alt="" />
+									<img class="img-fluid" src="img/smdm_thumb.png" alt="" />
 									<div class="portfolio-desc d-flex align-center position-absolute h-100 w-100">
 										<div class="folio-info my-auto w-100 text-center">
-											<a href="" class="fancybox"><i class="fas fa-search-plus fa-3x"></i></a>
+                      <a href="smdm.html" class="fancybox"><i class="fas fa-search-plus fa-3x"></i></a>
+                      <h5 class="lang-en">Multi-view 3D reconstruction from satellite images</h5>
+                      <h5 class="lang-fr">Multi-view 3D reconstruction from satellite images</h5>
 										</div>
 									</div>
 								</div>
@@ -315,7 +317,7 @@
                     <h4 class="subheading">Research engineer, <a href="http://www.ipgp.fr/fr">IPGP</a> / <a href="http://ign.fr/">IGN</a>, Paris </h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">After my PhD, I begin a PostDoc with M Pierrot Deseiligny and Y Klinger</p>
+                    <p class="text-muted">I move to Paris to work on satellite images in <a href="https://micmac.ensg.eu/">MicMac</a> and with M Pierrot Deseiligny and Y Klinger</p>
                   </div>
                 </div>
               </li>
@@ -420,7 +422,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
+ <!--   <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="container">
         <div class="row text-center title">
           <h2>Projects</h2>
@@ -457,7 +459,7 @@
         </div>
       </div>
       <div class="cut cut-bottom"></div>
-    </section>
+    </section> -->
 
     <hr class="m-0">
 
