In the process of removing template stuff

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 </head>
 
-<body id="page-top" onload="reviewingVis('reviewing.json'); getPublicationsAuthor('guillaume-touya');">
+<body id="page-top" onload="reviewingVis('reviewing.json'); getPublicationsAuthor('ewelina-rupnik');">
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <select class="selectpicker" data-width="fit">
@@ -100,29 +100,23 @@
           <a>ewelina<!--anti@spam.fr!-->.rupnik@ign.fr</a>
         </div>
         <p class="lead mb-5 lang-en">Researcher in photogrammetry.</p>
-        <p class="lead mb-5 lang-en">Member of the <a href="">ACTE</a> research team</p>
-        <p class="lead mb-5 lang-fr">Chargée de recherche IGN en sciences de l'information géographique, géovisualisation, et généralisation cartographique. Directeur adjoint du LASTIG.</p>
+        <p class="lead mb-5 lang-en">Member of the <a href="https://umrlastig.github.io/acte/">ACTE</a> research team</p>
+        <p class="lead mb-5 lang-fr">Chargée de recherche IGN en sciences de l'information géographique, géovisualisation, et généralisation cartographique.</p>
         <p class="lead mb-5 lang-fr">Membre de l'équipe <a href="">ACTE</a></p>
-        <div class="social-icons">
-          <a href="#">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
+        <div class="social-icons"> 
           <a href="https://www.researchgate.net/profile/Ewelina_Rupnik">
             <i class="ai ai-researchgate"></i>
           </a>
           <a href="https://github.com/erupnik">
             <i class="fab fa-github"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
+          </a> 
           <a href="https://scholar.google.com/citations?user=Qjko2xoAAAAJ&hl=en&oi=ao">
             <i class="ai ai-google-scholar"></i>
           </a>
-          <a href="#">
+          <a href="https://orcid.org/0000-0002-7229-5501">
             <i class="ai ai-orcid"></i>
           </a>
-          <a href="#">
+          <a href="ewelina-rupnik">
             <i class="ai"><img src="img/icons/hal-b2.svg" width=45px/></i>
           </a>
         </div>
@@ -317,7 +311,7 @@
                     <h4 class="subheading">Research engineer, <a href="http://www.ipgp.fr/fr">IPGP</a> / <a href="http://ign.fr/">IGN</a>, Paris </h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">I move to Paris to work on satellite images in <a href="https://micmac.ensg.eu/">MicMac</a> and with M Pierrot Deseiligny and Y Klinger</p>
+                    <p class="text-muted">I move to Paris to work on satellite images in <a href="https://micmac.ensg.eu/">MicMac</a> with M Pierrot Deseiligny and Y Klinger</p>
                   </div>
                 </div>
               </li>
@@ -469,93 +463,8 @@
 
         <div class="subheading mb-3">Software development</div>
 
-        <div class="row projects">
-          <div class="col-md-4">
-            <div class="project">
-              <div class="icon-holder">
-                <img src="img/icons/cartagen_logo.png" alt="" class="icon">
-              </div>
-              <h4 class="heading">CartAGen</h4>
-              <a class="description" href="https://github.com/IGNF/CartAGen">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="project">
-              <div class="icon-holder">
-                <img src="img/icons/Geoxygene-logo.png" alt="" class="icon">
-              </div>
-              <h4 class="heading">GeOxygene</h4>
-              <a class="description" href="https://github.com/IGNF/geoxygene">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="project">
-              <div class="icon-holder">
-                <img src="img/icons/logo_deepmapgen_small.png" alt="" class="icon">
-              </div>
-              <h4 class="heading">DeepMapGen</h4>
-              <p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
-            </div>
-          </div>
-        </div>
 
-        <div class="subheading mb-3 mt-3">Teaching</div>
 
-        <div class="subheading mb-3 mt-3">Other research activities</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-square"></i>
-            <a href="https://generalisation.icaci.org/">Chair of the ICA commission on Map Generalisation and Multiple Representation</a> since Jul. 2017</li>
-          <li>
-            <i class="fa-li fa fa-square"></i>
-            <a href="http://apvgi-magis.ign.fr/">Co-chair of the GDR MAGIS CNRS commission on crowdsourcing and VGI</a> since Jan. 2017</li>
-          <li>
-            <i class="fa-li fa fa-square"></i>
-            Member of the scientific committee of the SAGEO conference series since 2017</li>
-          <li>
-            <i class="fa-li fa fa-square"></i>
-            Regular reviewer of most important journals in GI science (IJGIS, CaGIS, JOSIS, IJC...)</li>
-        </ul>
-
-        <div class="subheading mb-3 mt-3">Supervisions</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check-square"></i>
-            Adrien Maudet (PhD, 2016), co-supervised with Cécile Duchêne (LASTIG) and Sébastien Picault (CRISTAL, Lille)</li>
-          <li>
-            <i class="fa-li fa fa-check-square"></i>
-            Marion Dumont (PhD, 2018), co-supervised with Cécile Duchêne (LASTIG)</li>
-          <li>
-            <i class="fa-li fa fa-square"></i>
-            Quy Thy Truong (PhD), co-supervised with Cyril de Runz (CReSTIC, Reims)</li>
-          <li>
-            <i class="fa-li fa fa-square"></i>
-            Sébastien Biniek (PhD), co-supervised with Gilles Rouffineau (ESAD Valence)</li>
-          <li>
-            <i class="fa-li fa fa-square"></i>
-            Gauthier Filières-Riveau (PhD), co-supervised with Jean-Marie Favreau and Vincent Barra (LIMOS, Clermont-Ferrand)</li>
-        </ul>
-
-        <div class="subheading mb-3 mt-3">Reviewing</div>
-        <div id="reviewings" class="sub">
-            <div id="revj">
-            </div>
-            <div id="revc">
-            </div>
-            <div id="revb">
-            </div>
-        </div>
-
-        <div class="subheading mb-3">Awards</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2018 Henry Johns Award for the most outstanding paper published in 2017 in the Cartographic Journal</li>
-        </ul>
-      </div>
-    </section>
-
-  </div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
