Add research interest

--- a/index.html
+++ b/index.html
@@ -131,10 +131,22 @@
         <h2 class="mb-5 lang-fr">Sujets de recherche</h2>
         <hr class="star-dark mb-5">
         <div class="row">
+            <article class="col-md-6 col-lg-4" >
+                <div class="portfolio-item d-block ">
+                  <img class="img-fluid" style="width:70%" src="img/ellipsoid-toy_thumb.png" alt="" />
+                  <div class="portfolio-desc d-flex align-center  position-absolute" style="width:70%">
+                    <div class="folio-info my-auto w-100 text-center" >
+                      <a href="structureless.html" class="fancybox"><i class="fas fa-search-plus fa-3x"></i></a>
+                      <h5 class="lang-en">Towards truly structureless BA</h5>
+                      <h5 class="lang-fr">Towards truly structureless BA</h5>
+                    </div>
+                  </div>
+                </div>
+            </article> 
           <article class="col-md-6 col-lg-4">
-								<div class="portfolio-item d-block mx-auto">
-									<img class="img-fluid" src="img/smdm_thumb.png" alt="" />
-									<div class="portfolio-desc d-flex align-center position-absolute h-100 w-100">
+								<div class="portfolio-item d-block ">
+									<img class="img-fluid" style="width:90%"  src="img/smdm_thumb.png" alt="" />
+									<div class="portfolio-desc d-flex align-center position-absolute " style="width:90%">
 										<div class="folio-info my-auto w-100 text-center">
                       <a href="smdm.html" class="fancybox"><i class="fas fa-search-plus fa-3x"></i></a>
                       <h5 class="lang-en">Multi-view 3D reconstruction from satellite images</h5>
@@ -143,6 +155,19 @@
 									</div>
 								</div>
           </article> 
+          <article class="col-md-6 col-lg-4">
+              <div class="portfolio-item d-block mx-auto">
+                <img class="img-fluid" style="width:70%"  src="img/RPC-imgs.jpg" alt="" />
+                <div class="portfolio-desc d-flex align-center position-absolute " style="width:70%">
+                  <div class="folio-info my-auto w-100 text-center">
+                    <a href="RPC-BA.html" class="fancybox"><i class="fas fa-search-plus fa-3x"></i></a>
+                    <h5 class="lang-en">Satellite positioning</h5>
+                    <h5 class="lang-fr">Satellite positioning</h5>
+                  </div>
+                </div>
+              </div>
+        </article> 
+
         </div>
       </div>
     </section>
