--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
       <div class="w-100">
-        <h2 class="mb-5">Publications</h2>
+        <h2 class="mb-5">Selected Publications @IGN</h2>
 
         <span id="pubACL"><div class="subheading mb-3 mt-3">[ACL] Journals</div></span>
         <span id="pubACLN"><div class="subheading mb-3 mt-3">[ACLN] Journals</div></span>
