--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     <h4 class="subheading">I become a permament researcher at LaSTIG, MATIS / ACTE lab</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted"></p>
+                    <p class="text-muted">And I focus on pose estimation problems</p>
                   </div>
                 </div>
               </li>
@@ -383,6 +383,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Technische Universitat WIEN, Austria</h3>
+            <h3 class="mb-0"><a href="https://photo.geo.tuwien.ac.at/">Photogrammetry Research Group</a></h3>
             <div class="subheading mb-3">PhD in photogrammetry</div>
             <!--<div>TUWIEN, Austria</div>-->
           </div>
@@ -393,7 +394,18 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">AGH Universtiy of Science and technology, Cracow, Poland</h3>
+            <h3 class="mb-0">Technische Universitaet Muenchen, Germany</a></h3>
+            <h3 class="mb-0"><a href="http://www.pf.bgu.tum.de/">Dept. of Photogrammetry and Remote Sensing</a></h3>
+            <div class="subheading mb-3">Erasmus</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2009 - Mars 2010</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">AGH Universtiy of Science and technology, Cracow, Poland</h3> 
             <div class="subheading mb-3">MSc Eng in Geodesy and Cartography, major in photogrammetry</div>
           </div>
           <div class="resume-date text-md-right">
